[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spycause_tdhoffman"
version = "0.0.1"
authors = [
    { name="Tyler D. Hoffman", email="cause@tdhoffman.com" },
]
description = "A module for spatial causal inference in Python."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/tdhoffman/spycause"
"Bug Tracker" = "https://github.com/tdhoffman/spycause/issues"
